--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -26,7 +26,7 @@ body {
     width: 80vw;
     height: 80vh;
     overflow-y: scroll;
-    background-color: rgb(117, 117, 117);
+    background-color: rgb(180, 180, 180);
     border-radius: 10px;
 }
 
@@ -35,6 +35,7 @@ body {
     text-align: left;
     // padding-top: 20px;
     height: 100%;
+    position: relative;
 }
 
 .chart-text ul{
@@ -43,13 +44,15 @@ body {
 }
 
 .country-bar {
-    position: relative;
+    position: absolute;
+    padding-top: 10px;
     padding-bottom: 20px;
     height: 50px;
+    width: 100%;
 }
 
 .country-text {
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     padding-left: 20px;
