--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -56,7 +56,7 @@ body {
     display: flex;
     align-items: center;
     padding-left: 20px;
-    font-size: 30px;
+    font-size: calc(15px + 2vmin);
     color: white;
     text-shadow:0px 1px 5px black;
 }
@@ -71,6 +71,18 @@ body {
 .test-data{
     display: flex;
     flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    .country-text {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding-left: 20px;
+        font-size: calc(10px + 2vmin);
+        color: white;
+        text-shadow:0px 1px 5px black;
+    }
 }
 
 
