edit align text v2

--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -79,7 +79,7 @@ body {
         position: relative;
         display: flex;
         align-items: center;
-        justify-content: center;
+        padding-top: 10px;
         padding-left: 20px;
         font-size: calc(10px + 2vmin);
         color: white;
